# api_docs.json
@@ -12,9 +12,6 @@
       "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
     }
   },
-  "tags": {
-      "name": "employees"
-    },
   "basePath": "/",
 
   "paths": {
@@ -813,8 +810,168 @@
             }
           }
         }
-      }
+      },
       
+      "/accounts": {
+        "get": {
+          "tags": [
+            "accounts"
+          ],
+          "summary": "Gets all Accounts",
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "201": {
+              "description": "Successfully gets Accounts"
+            },
+            "401": {
+              "description": "invalid input, object invalid"
+            },
+            "500": {
+              "description": "Server error"
+            }
+          }
+        },
+        "post": {
+          "tags": [
+            "accounts"
+          ],
+          "summary": "Adds a new account",
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "parameters": [
+            {
+              "in": "body",
+              "name": "Account params",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/account"
+              }
+            }
+          ],
+          "responses": {
+            "201": {
+              "description": "Successfully added a new Account"
+            },
+            "401": {
+              "description": "invalid input, object invalid"
+            },
+            "500": {
+              "description": "Server error"
+            }
+          }
+        }
+      },
+      
+      "/accounts/{account_id}":{
+        "get": {
+          "tags": [
+            "accounts"
+          ],
+          "summary": "Gets a single account",
+          "produces": [
+            "application/json"
+          ],
+          "parameters": [
+            {
+              "in": "path",
+              "name": "account_id",
+              "required": true
+            }
+          ],
+          "responses": {
+            "201": {
+              "description": "Successfully gets a single Account"
+            },
+            "401": {
+              "description": "invalid input, object invalid"
+            },
+            "404": {
+              "description": "Resource not found"
+            },
+            "500": {
+              "description": "Server error"
+            }
+          }
+        },
+        "patch": {
+          "tags": [
+            "accounts"
+          ],
+          "summary": "Updates an existing account",
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "parameters": [
+            {
+              "in": "path",
+              "name": "account_id",
+              "required": true
+            },
+            {
+              "in": "body",
+              "name": "Account params",
+              "required": false,
+              "schema": {
+                "$ref": "#/definitions/account"
+              }
+            }
+          ],
+          "responses": {
+            "201": {
+              "description": "Successfully updates existing Post"
+            },
+            "401": {
+              "description": "invalid input, object invalid"
+            },
+            "404": {
+              "description": "Resource not found"
+            },
+            "500": {
+              "description": "Server error"
+            }
+          }
+        },
+        "delete": {
+          "tags": [
+            "accounts"
+          ],
+          "summary": "Deletes single account",
+          "produces": [
+            "application/json"
+          ],
+          "parameters": [
+            {
+              "in": "path",
+              "name": "account_id",
+              "required": true
+            }
+          ],
+          "responses": {
+            "201": {
+              "description": "Successfully deleted Account"
+            },
+            "401": {
+              "description": "invalid input, object invalid"
+            },
+            "404": {
+              "description": "Resource not found"
+            },
+            "500": {
+              "description": "Server error"
+            }
+          }
+        }
+      }
+
 
   },
 
@@ -925,6 +1082,29 @@
           "lecturer": {
             "type": "string",
             "example": "Mr Lecturer"
+          }
+        }
+      },
+
+      "account": {
+        "type": "object",
+        "required": [
+          "name",
+          "number",
+          "bank"
+        ],
+        "properties": {
+          "name": {
+            "type": "string",
+            "example": "account name"
+          },
+          "number": {
+            "type": "integer",
+            "example": "133331315"
+          },
+          "bank": {
+            "type": "string",
+            "example": "accounts bank"
           }
         }
       }
